--- a/generative_art_midterm 2/css/styles.css
+++ b/generative_art_midterm 2/css/styles.css
@@ -353,9 +353,12 @@ canvas{
     display:block;
     max-width:1100px;
     margin:0 auto;
-    position:absolute;
-    top:25%;
-    left:10%;
+    left:50%;
+    
+    position: fixed;
+    top: 50%;
+    margin-top: -200px;
+    margin-left:-400px;
 }
 
 h1, h2, h3, h4, h5, h6, p, a{
